Add a new option to the clean command: --root (-r) runs the clean using sudo, so that it can clean things like link tracing logs.

--- a/utils/loghole.1
+++ b/utils/loghole.1
@@ -393,6 +393,9 @@ Only remove log files on the nodes.
 .TP
 \fB-e\fR, \fB--experiment
 Only remove log directories in the experiment's log directory.
+.TP
+\fB-r\fR, \fB--root
+Use sudo to run the clean as root on the nodes
 .SH GC
 The
 .B gc
